Improvement dropdown js

--- a/src/twig/catalog.twig
+++ b/src/twig/catalog.twig
@@ -10,15 +10,16 @@
 <main class="b-catalog b-container">
   <div class="b-catalog__sorting">
     <!-- Begin: filter -->
-    <div class="b-filter">
-      <div class="b-filter__label js-filter__label">
+
+    <div class="b-filter js__dropdown">
+      <div class="b-filter__label js__dropdown-toggle">
         <span class="b-filter__label-text">FILTER</span>
         <svg class="b-filter__label-decor">
           <use xlink:href="assets/img/sprite.svg#filter"></use>
         </svg>
       </div>
 
-      <div class="b-filter__fly">
+      <div class="b-filter__fly dropdown-menu">
         <div class="b-filter__box">
           <div class="b-filter__box-title acc acc__active js-collapse">CATEGORY</div>
 
@@ -145,15 +146,15 @@
 
     <!-- Begin: sorting -->
     <div class="b-sorting">
-      <div class="b-sorting__box">
-        <div class="b-sorting__box-heading acc js-collapse">
+      <div class="b-sorting__box js__dropdown">
+        <div class="b-sorting__box-heading js__dropdown-toggle">
           TRENDING NOW
           <svg class="b-sorting__box-decor">
             <use xlink:href="assets/img/sprite.svg#chevron"></use>
           </svg>
         </div>
 
-        <ul class="b-sorting__dropdown acc__content list__unstyled">
+        <ul class="b-sorting__dropdown list__unstyled dropdown-menu">
           <li>
             <label class="b-custom__control">
               <input type="checkbox" class="b-custom__control-input">
@@ -175,15 +176,15 @@
         </ul>
       </div>
 
-      <div class="b-sorting__box">
-        <div class="b-sorting__box-heading acc js-collapse">
+      <div class="b-sorting__box js__dropdown">
+        <div class="b-sorting__box-heading js__dropdown-toggle">
           SIZE
           <svg class="b-sorting__box-decor">
             <use xlink:href="assets/img/sprite.svg#chevron"></use>
           </svg>
         </div>
 
-        <ul class="b-sorting__dropdown acc__content list__unstyled">
+        <ul class="b-sorting__dropdown list__unstyled dropdown-menu">
           <li>
             <label class="b-custom__control">
               <input type="checkbox" class="b-custom__control-input">
@@ -211,15 +212,15 @@
         </ul>
       </div>
 
-      <div class="b-sorting__box">
-        <div class="b-sorting__box-heading acc js-collapse">
+      <div class="b-sorting__box js__dropdown">
+        <div class="b-sorting__box-heading js__dropdown-toggle">
           PRICE
           <svg class="b-sorting__box-decor">
             <use xlink:href="assets/img/sprite.svg#chevron"></use>
           </svg>
         </div>
 
-        <ul class="b-sorting__dropdown acc__content list__unstyled">
+        <ul class="b-sorting__dropdown list__unstyled dropdown-menu">
           <li>
             <label class="b-custom__control">
               <input type="radio" name="radio01" class="b-custom__control-input" checked>
