--- a/src/twig/templates/_top.twig
+++ b/src/twig/templates/_top.twig
@@ -20,11 +20,11 @@
       </svg>
     </a>
 
-    <a href="cart.html" class="b-top__basket" data-basket-amount="5">
+    <div class="b-top__basket" data-basket-amount="0">
       <svg class="b-top__basket-icon">
         <use xlink:href="assets/img/sprite.svg#basket"></use>
       </svg>
-    </a>
+    </div>
 
 
     <!-- Begin float menu -->
