--- a/src/styles/section/_filter.scss
+++ b/src/styles/section/_filter.scss
@@ -16,11 +16,14 @@
 
 .b-filter__fly {
   padding: 49px 15px 15px;
-  background-color: #fff;
-  box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
-  position: absolute;
   top: -15px;
   left: 0;
+}
+
+.dropdown-menu {
+  box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+  background-color: #fff;
+  position: absolute;
   opacity: 0;
   pointer-events: none;
   transition: opacity .2s ease-in-out;
@@ -62,17 +65,14 @@
   color: #6F6E6E;
 }
 
-.b-filter__open {
-  color: #EF5B70;
+.dropdown-active .dropdown-menu {
+  opacity: 1;
+  pointer-events: auto;
+}
 
-  .b-filter__label-decor {
-    fill: #EF5B70;
-  }
-
-  + .b-filter__fly {
-    opacity: 1;
-    pointer-events: auto;
-  }
+.b-filter__label-text,
+.b-filter__label-decor {
+  pointer-events: none;
 }
 
 @media (min-width: 700px) {
